src/test/deca/syntax/invalid/homemade/parser/test/test_pars_inv_class_method_oubli_liste_param.deca
// Description:
//    tests de programme incorrect syntaxiquement pour les class
//
// Resultats:
//    Ligne 12 : Erreur (expected "(" or ";" after "x")
//    
//
// Historique:
//    cree le 04/01/2023

class iden1 extends iden3{
    int x
    {type var; instr;}
}